# imaptest

./: .gitignore  .gitmodules  .hgignore  .travis.yml  AGENTS.md  AUTHORS  COPYING  Dockerfile  Makefile.am  README.md  autogen.sh  configure.ac  configure.in  package-lock.json  package.json  pop3-profile.conf  profile.conf
.github/: dependabot.yml
.github/workflows/: documentation.yml  static.yml
build-aux/: git-tarname-version-gen
docs/: authors.md  benchmarking.md  build.md  compliancy.md  configuration.md  download.md  examples.md  features.md  index.md  installation.md  license.md  profile.md  scripted_test.md  states.md
docs/.vitepress/: config.mjs  config.mts
dovecot_patches/: disabe_wiki_download.patch  disable_wiki_download.patch  smtp_syntax.patch
rpm/: coreprep.sh  imaptest.spec
src/: Makefile.am  checkpoint.c  checkpoint.h  client-state.c  client-state.h  client.c  client.h  commands.c  commands.h  imap-args.c  imap-args.h  imap-client.c  imap-client.h  imap-profile.conf  imaptest-lmtp.c  imaptest-lmtp.h  imaptest.c  imapurl.c  imapurl.h  mailbox-source-mbox.c  mailbox-source-private.h  mailbox-source-random.c  mailbox-source.c  mailbox-source.h  mailbox-state.c  mailbox-state.h  mailbox.c  mailbox.h  pop3-client.c  pop3-client.h  profile-parse.c  profile.c  profile.h  search.c  search.h  settings.c  settings.h  test-exec.c  test-exec.h  test-parser.c  (+4 more)
src/tests/: Makefile.am  append  append-binary  catenate  catenate-multiappend  copy  default.mbox  esearch  esearch-condstore  esearch.mbox  esort  expunge  expunge2  fetch  fetch-binary-mime  fetch-binary-mime-base64  fetch-binary-mime-qp  fetch-body  fetch-body-message-rfc822  fetch-body-message-rfc822-mime  fetch-body-message-rfc822-x2  fetch-body-mime  fetch-bodystructure  fetch-bodystructure.mbox  fetch-envelope  fetch-envelope.mbox  list  listext  move  nil  notify  pipeline-connections  search-addresses  search-addresses.mbox  search-body  search-context-update  search-context-update2  search-context-update3  search-date  search-flags  (+30 more)
tests/: 01-test-basic  02-compliance
utils/: generate_mbox.py
