AC_INIT([imaptest],[1.0.0],[dovecot@dovecot.org])
AC_CONFIG_SRCDIR([src])

AC_CONFIG_HEADERS([imaptest-config.h])
AM_INIT_AUTOMAKE

AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_CPP
AM_PROG_LIBTOOL

DC_DOVECOT
CFLAGS="$DOVECOT_CFLAGS"
LIBS="$DOVECOT_LIBS"

AC_CONFIG_FILES([
Makefile
src/Makefile
stamp.h])

AC_OUTPUT
