EXTRA_DIST = \
	append \
	close \
	copy \
	default.mbox \
	expunge \
	expunge2 \
	fetch \
	fetch-body \
	fetch-envelope \
	fetch-envelope.mbox \
	list \
	listext \
	Makefile.am \
	search-addresses \
	search-addresses.mbox \
	search-body \
	search-body.mbox \
	search-context-update \
	search-context-update2 \
	search-date \
	search-date.mbox \
	search-flags \
	search-header \
	search-header.mbox \
	search-intdate \
	search-intdate.mbox \
	search-sets \
	search-size \
	search-size.mbox \
	select \
	select.mbox \
	sort-addresses \
	sort-addresses.mbox \
	sort-arrival \
	sort-arrival.mbox \
	sort-date \
	sort-date.mbox \
	sort-size \
	sort-size.mbox \
	sort-subject \
	sort-subject.mbox \
	store \
	subscribe \
	thread \
	thread2 \
	thread2.mbox \
	thread3 \
	thread3.mbox \
	thread4 \
	thread4.mbox \
	thread5 \
	thread5.mbox \
	thread6 \
	thread6.mbox \
	thread7 \
	thread7.mbox \
	thread8 \
	thread8.mbox \
	thread.mbox
